apps/traefik/base/dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dev.truxonline.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
