apps/traefik/base/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dev.truxonline.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
